force-app/main/default/objects/Avion__c/Avion__c.object-meta.xml
<CustomObject>
    <description>Vehículo de transporte de pasajeros o carga que se moviliza de un lugar a otro por el aire.</description>
    <label>Avión</label>
    <nameField>
        <displayFormat>AV-{00000}</displayFormat>
        <label>Número de Avión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aviones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>