force-app/main/default/objects/Avion__c/fields/Auxiliares_de_vuelo_requeridos__c.field-meta.xml
<CustomField>
    <fullName>Auxiliares_de_vuelo_requeridos__c</fullName>
    <formula>FLOOR((Numero_de_pasajeros_clase_negocios__c  +  Numero_de_pasajeros_clase_turista__c) / 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auxiliares de vuelo requeridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>