force-app/main/default/objects/Avion__c/fields/Capacidad_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_carga__c</fullName>
    <description>Máximo peso soportado por un avión</description>
    <label>Capacidad de carga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>