force-app/main/default/objects/Avion__c/fields/Numero_de_pasajeros_clase_turista__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasajeros_clase_turista__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad de asientos en clase turista que tiene un avión</description>
    <label>Número de pasajeros clase turista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>