force-app/main/default/objects/Avion__c/fields/Solo_carga__c.field-meta.xml
<CustomField>
    <fullName>Solo_carga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El avión sólo transporta mercancía, no pasajeros</description>
    <label>¿Sólo carga?</label>
    <type>Checkbox</type>
</CustomField>