force-app/main/default/objects/Avion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Varía de acuerdo al tipo de mercancía que transporta</description>
    <label>Tipo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>