force-app/main/default/objects/Avion__c/fields/Viajes_internacionales__c.field-meta.xml
<CustomField>
    <fullName>Viajes_internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El avión recorre distancias grandes, su lugar de destino es un país extranjero</description>
    <label>¿Viajes internacionales?</label>
    <type>Checkbox</type>
</CustomField>