force-app/main/default/objects/Avion__c/fields/Viajes_nacionales__c.field-meta.xml
<CustomField>
    <fullName>Viajes_nacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El avión recorre distancias cortas dentro del territorio nacional</description>
    <label>¿Viajes nacionales?</label>
    <type>Checkbox</type>
</CustomField>