force-app/main/default/objects/Avion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Solo_carga__c</columns>
    <columns>Auxiliares_de_vuelo_requeridos__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>